<resources>
    <string name="app_name">EPass</string>
    <string name="settings">settings</string>
    <string name="add">add</string>
    <string name="my_passed">Мои пропуска</string>
    <string name="my_passes">Мои пропуска</string>


    <string name="edit_pass">Редактировать</string>
    <string name="pass_card_title">Пропуск в офис Альфа Банка</string>
    <string name="turn_your_phone">Поднесите смартфон к считывающему устройству</string>

    <string name="do_you_want_to_delete">Вы уверены, что хотите удалить этот пропуск?</string>
    <string name="yes">да</string>
    <string name="no">нет</string>
    <string name="delete">Удалить</string>
    <string name="enter_title">Введите название</string>
    <string name="name_of_card">Название</string>
    <string name="edit_title">Редактировать</string>
    <string name="settings_">Настройки</string>
    <string name="light_theme">Светлая</string>
    <string name="dark_theme">Темная</string>
    <string name="russian_lan">Русский</string>
    <string name="english_lan">English</string>
    <string name="nfc_read">Поместите пропуск как можно ближе к nfc чипу вашего смартфона</string>
</resources>