<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".presentation.ui.ActivityPass">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:elevation="0dp"
            app:elevation="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:singleLine="true"
                    android:text="Пропуск"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="@id/btn_back"
                    app:layout_constraintStart_toEndOf="@+id/btn_back"
                    app:layout_constraintTop_toTopOf="@id/btn_back" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="328dp"
            android:layout_height="208dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/pass_card"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <TextView
                android:id="@+id/pass_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/pass_card_title"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:singleLine="true"
                android:maxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/edit_pass_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:textAllCaps="false"
                android:text="@string/edit_pass"
                android:textColor="@color/pale_blue"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="22dp"
                android:layout_height="26dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_nfc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="14dp"
                android:layout_height="match_parent"
                android:background="@drawable/round_rail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/phone_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:srcCompat="@drawable/ic_phone_unchecked" />

        <TextView
            android:id="@+id/turn_your_phone"
            android:layout_width="262dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:text="@string/turn_your_phone"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
